--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,8 @@
 
 body {
   font-family: "Source Code Pro", monospace; 
-  color: #ffffff;
-  background-color: black;
+  color: #000000;
+  background-color: white;
 }
 
 h1, h2, h3, h4, h5, h6 {
