--- a/src/sections/menu/nav.module.css
+++ b/src/sections/menu/nav.module.css
@@ -7,6 +7,10 @@
   align-items: center;
 }
 
+.active {
+  text-decoration: underline;
+}
+
 /* Hide on screens smaller than 768px */
 @media (max-width: 767px) {
   .desktopNav {
