--- a/src/sections/menu/nav.module.css
+++ b/src/sections/menu/nav.module.css
@@ -3,7 +3,7 @@
   min-height: 70px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
