--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,3 +104,14 @@ h1, h2, h3, h4, h5, h6 {
 .swiper-pagination-bullet-active {
   background: wheat !important;
 }
+
+/* CSS for hiding the NavigationFooter on mobile devices */
+.navigation-footer {
+  display: none; /* Hide by default */
+}
+
+@media (min-width: 768px) {
+  .navigation-footer {
+    display: block; /* Show on tablet and larger screens */
+  }
+}
