--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,26 +38,31 @@ h1, h2, h3, h4, h5, h6 {
 .slider .slide:nth-child(1) {
   background-image: url("../assets/sliderimg1.png");
   animation-delay: 0s;
+  background-color: rgba(0, 0, 1, 1);
 }
 
 .slider .slide:nth-child(2) {
   background-image: url("../assets/sliderimg2.jpg");
   animation-delay: -2.5s;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 .slider .slide:nth-child(3) {
   background-image: url("../assets/sliderimg3.jpg");
   animation-delay: -5s;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 .slider .slide:nth-child(4) {
   background-image: url("../assets/sliderimg4.jpg");
   animation-delay: -7.5s;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 .slider .slide:nth-child(5) {
   background-image: url("../assets/sliderimg5.jpg");
   animation-delay: -10s;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 @keyframes slider {
