--- a/src/components/FeedMenu/feed.module.css
+++ b/src/components/FeedMenu/feed.module.css
@@ -4,6 +4,7 @@
 
 .title {
   font-size: 40px;
+  font-family: 'Monoton', cursive;
   line-height: normal;
   margin-bottom: 32px; 
   color: black;
