--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -63,11 +63,11 @@
   content: "";
   position: fixed;
   top: 0;
-  left: 100%;
+  left: 90%;
   width: 15%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.757); /* Semi-transparent black shadow */
-  z-index: 103; /* Below the menu overlay */
+  background: rgba(0, 0, 0, 0.715); /* Semi-transparent black shadow */
+  z-index: 102; /* Adjust as needed to fit your z-index structure */
 }
 
 .menuList {
