--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -62,12 +62,12 @@
 .shadowOverlay {
   content: "";
   position: fixed;
-  top: 0;
+  top: 49px;
   left: 90%;
   width: 15%;
   height: 100%;
   background: rgba(0, 0, 0, 0.715); /* Semi-transparent black shadow */
-  z-index: 102; /* Adjust as needed to fit your z-index structure */
+  z-index: 100; /* Adjust as needed to fit your z-index structure */
 }
 
 .menuList {
