--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 50px; /* Ensure container height is sufficient */
-  background-color: transparent;
+  background-color: white;
   z-index: 130;
   display: none; /* Default setting to not display on desktop */
   align-items: center;
