--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -18,67 +18,11 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Monoton', cursive; 
 }
 
-.slider {
-  overflow: hidden;
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-}
-
-.slider .slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+main {
+  background-image: url("../assets/sliderimg1.png");
   background-size: cover;
   background-position: center;
-  animation: slider 12.5s infinite;
-}
-
-.slider .slide:nth-child(1) {
-  background-image: url("../assets/sliderimg1.png");
-  animation-delay: 0s;
-  background-color: rgba(0, 0, 1, 1);
-}
-
-.slider .slide:nth-child(2) {
-  background-image: url("../assets/sliderimg2.jpg");
-  animation-delay: -2.5s;
-  background-color: rgba(0, 0, 0, 1);
-}
-
-.slider .slide:nth-child(3) {
-  background-image: url("../assets/sliderimg3.jpg");
-  animation-delay: -5s;
-  background-color: rgba(0, 0, 0, 1);
-}
-
-.slider .slide:nth-child(4) {
-  background-image: url("../assets/sliderimg4.jpg");
-  animation-delay: -7.5s;
-  background-color: rgba(0, 0, 0, 1);
-}
-
-.slider .slide:nth-child(5) {
-  background-image: url("../assets/sliderimg5.jpg");
-  animation-delay: -10s;
-  background-color: rgba(0, 0, 0, 1);
-}
-
-@keyframes slider {
-  0%, 16%, 100% {
-    transform: translateX(0);
-    animation-timing-function: ease;
-  }
-  20% {
-    transform: translateX(-100%);
-    animation-timing-function: step-end;
-  }
-  96% {
-    transform: translateX(100%);
-    animation-timing-function: ease;
-  }
+  background-attachment: fixed; /* Keeps the background fixed during scrolling */
 }
 
 ::-webkit-scrollbar {
