updates glove styles

--- a/src/components/FeedMenu/feed.module.css
+++ b/src/components/FeedMenu/feed.module.css
@@ -12,6 +12,8 @@
 
   @media (max-width: 767px) {
     text-align: center;
+      font-size: 32px; /* Smaller font size for mobile screens */
+    
   }
 }
 
