--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -19,15 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 main {
-  background-image: url("../assets/sliderimg1.png");
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* Keeps the background fixed during scrolling */
-}
-
-
-form {
-
+  background-color: #008c4a;
 }
 
 ::-webkit-scrollbar {
@@ -47,10 +42,6 @@ form {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-}
-
-.swiper-pagination-bullet-active {
-  background: wheat !important;
 }
 
 .navigation-footer {
