--- a/src/components/BookComponents/bookComponents.module.css
+++ b/src/components/BookComponents/bookComponents.module.css
@@ -10,7 +10,7 @@
 .bookTitle {
   text-align: center;
   color: #00b55e;
-  font-family: Monoton, cursive;
+  font-family: 'Monoton', cursive;
 }
 
 .backButton {
