--- a/src/components/BookComponents/bookComponents.module.css
+++ b/src/components/BookComponents/bookComponents.module.css
@@ -25,8 +25,13 @@
 
 .confirmationMessage {
   text-align: center;
-  padding: 20px;
+  padding: 50px;
   font-size: 1.2em;
+}
+
+.confirmationButton {
+  background-color: #00b55e !important;
+  color: #fff !important;
 }
 
 .primaryButton {
@@ -59,5 +64,21 @@
     align-items: baseline;
     margin-top: 30px;
     }
+
+    .container {
+      max-width: 560px;
+      margin: 60px auto;
+      background: white;
+      display: flex;
+      flex-direction: column;
+      gap:40px;
+    }
+    
+    .bookTitle {
+      text-align: center;
+      color: #00b55e;
+      font-family: 'Monoton', cursive;
+    }
+
 }
 
