updates book page styles

--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -1,7 +1,7 @@
 /* Base styles for stickyContainer */
 .stickyContainer {
   position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
