--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -23,25 +23,10 @@ main {
   background-position: center;
   background-attachment: fixed; /* Keeps the background fixed during scrolling */
   background-color: #008c4a;
-}
-
-::-webkit-scrollbar {
-  width: 0;
-  height: 0;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #ccc;
-}
-
-.dark-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  min-height: 100vh; /* Ensures the minimum height of the viewport */
+  width: 100vw; /* Width is set to the width of the viewport */
+  overflow: hidden; /* Hides both vertical and horizontal overflow */
+  position: relative; /* Added to maintain the positioning context */
 }
 
 .navigation-footer {
