--- a/src/components/BookComponents/bookComponents.module.css
+++ b/src/components/BookComponents/bookComponents.module.css
@@ -1,16 +1,24 @@
 .container {
-  max-width: 560px;
-  margin: 60px auto;
-  background: white;
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
+  max-width: 560px !important;
+  margin: 60px auto !important;
+  background: white !important;
+  display: flex !important;
+  flex-direction: column !important;
+  gap: 40px !important;
 }
+
+.stickyButtons {
+  justify-content: flex-end !important;
+  gap: 20px !important;
+  background: white;
+  align-items: baseline !important;
+  margin-top: 30px !important;
+  }
 
 .bookTitle {
   text-align: center;
   color: #00b55e;
-  font-family: 'Monoton', cursive;
+  font-family: 'Monoton', cursive !important;
 }
 
 .backButton {
@@ -57,13 +65,6 @@
 }
 
 @media (max-width: 768px) {
-  .stickyButtons {
-    justify-content: flex-end !important;
-    gap: 20px !important;
-    background: white;
-    align-items: baseline !important;
-    margin-top: 30px !important;
-    }
 
   .container {
     max-width: 560px;
