--- a/src/components/FeedMenu/feed.module.css
+++ b/src/components/FeedMenu/feed.module.css
@@ -17,6 +17,21 @@
   }
 }
 
+.subtitle {
+  font-size: 24px;
+  line-height: normal;
+  margin-top: 40px;
+  margin-bottom: 32px; 
+  color: #00b55e;
+  text-align: left; 
+
+  @media (max-width: 767px) {
+    text-align: center;
+      font-size: 20px; /* Smaller font size for mobile screens */
+    
+  }
+}
+
 .item {
   margin-top: 32px;
   flex-direction: column;
