--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -75,10 +75,13 @@
   padding: 0;
   margin: 0;
   flex-grow: 1; /* Allows list to fill available space */
+  width: 100%; /* Make the list take up the full width */
 }
 
 .menuList li {
   margin-bottom: 15px;
+  cursor: pointer; /* Make the cursor indicate a clickable item */
+  width: 100%; /* Make the list item take up the full width */
 }
 
 .menuList li a {
@@ -86,6 +89,27 @@
   font-size: 20px;
   text-decoration: none;
   display: block;
+  width: 100%; /* Make the link take up the full width of the list item */
+  height: 100%; /* Make the link take up the full height of the list item */
+  padding: 10px 0; /* Adjust padding for better clickable area */
+}
+
+.menuItem {
+  width: 100%;
+  cursor: pointer; /* Changes the cursor to a pointer to indicate a clickable area */
+}
+
+.menuLink {
+  display: block; /* Makes the link cover the entire list item area */
+  width: 100%; /* Ensures it takes the full width of the parent list item */
+  padding: 15px; /* Adds padding for a larger clickable area */
+  color: rgb(110, 110, 110);
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.menuLink:hover {
+  background-color: rgba(200, 200, 200, 0.1); /* Adds a hover effect for better UX */
 }
 
 .closeIcon {
