--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -18,6 +18,16 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Monoton', cursive; 
 }
 
+.filter-darken {
+  filter: brightness(70%); /* Decreases brightness to 70%, adjust as needed */
+}
+
+.custom-image-container {
+  height: 430px; /* Adjust this value to make the image shorter */
+  position: relative; /* Necessary for Image to use layout fill */
+  overflow: hidden; /* Ensures no unwanted overflow */
+}
+
 main {
   background-size: 120%; /* Zoom in by increasing the background size */
   background-position: center;
