--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -28,6 +28,33 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden; /* Ensures no unwanted overflow */
 }
 
+.mobile-banner {
+  position: relative;
+  width: 100%;
+  background-color: #000; /* Adjusted color for better contrast */
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 18px;
+  z-index: 1000;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.mobile-banner span {
+  display: inline-block;
+  animation: scroll 18s linear infinite; /* Set duration to control speed */
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%); /* Start from outside the right edge */
+  }
+  100% {
+    transform: translateX(-100%); /* Move to outside the left edge */
+  }
+}
+
 main {
   background-size: 120%; /* Zoom in by increasing the background size */
   background-position: center;
