--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -33,11 +33,11 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   background-color: #fff201; /* Adjusted color for better contrast */
   color: #000;
-  font-family: "Bangers", system-ui;
+  font-family: "Encode Sans SC", sans-serif;
+  font-weight: 500;
   text-align: center;
-  padding: 8px 0;
-  margin-top: 14px;
-  font-size: 18px;
+  padding: 2px 0;
+  font-size: 16px;
   z-index: 1000;
   overflow: hidden;
   white-space: nowrap;
@@ -45,10 +45,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .mobile-banner span {
   display: inline-block;
-  padding-right: 100%; /* Extra padding for smooth exit and re-entry */
-  animation: scroll 10s linear infinite; /* Maintained speed */
-  animation-delay: 0s; /* No initial delay */
-  animation-fill-mode: forwards; /* Ensure it stays visible */
+  /* padding-right: 100%; */ /* Extra padding for smooth exit and re-entry */
+  animation: scroll 14s linear infinite; /* Maintained speed */
+  /* animation-delay: 0s; */ /* No initial delay */
+  /* animation-fill-mode: forwards; */ /* Ensure it stays visible */
 }
 
 @keyframes scroll {
